# k8s-apps-deployer

./: CONVERSION_STATUS.md  QUICKSTART.md  README.md  USAGE_KIND.md  pyproject.toml  requirements.txt  setup.sh
k8s_apps_deployer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
k8sdeployer/: __init__.py  application_factory.py  cli.py  cluster.py
k8sdeployer/ansible/: __init__.py  ansible.cfg  deploy.yml  remove.yml  validate.yml
k8sdeployer/ansible/roles/8pvc-app/defaults/: main.yml
k8sdeployer/ansible/roles/8pvc-app/tasks/: cleanup.yml  deploy.yml  validate.yml
k8sdeployer/ansible/roles/8pvc-app/templates/: deployment.yml.j2
k8sdeployer/ansible/roles/app-with-empty-pvc/defaults/: main.yml
k8sdeployer/ansible/roles/app-with-empty-pvc/tasks/: cleanup.yml  deploy.yml  validate.yml
k8sdeployer/ansible/roles/app-with-empty-pvc/templates/: deployment.yml.j2  pod.yml.j2  pvc.yml.j2
k8sdeployer/ansible/roles/basic-pod/defaults/: main.yml
k8sdeployer/ansible/roles/basic-pod/tasks/: cleanup.yml  deploy.yml  deploy_pod_two_pvs_add_data.yml  deploy_pod_two_pvs_base_data.yml  deploy_pod_two_pvs_remove_data.yml  main.yml  validate.yml  validate_pod_two_pvs_add_data.yml  validate_pod_two_pvs_base_data.yml  validate_pod_two_pvs_remove_data.yml
k8sdeployer/ansible/roles/basic-pod/templates/: deploy_pod_two_pvs_add_data.yml.j2  deploy_pod_two_pvs_base_data.yml.j2  deploy_pod_two_pvs_remove_data.yml.j2  (+5 more)
k8sdeployer/ansible/roles/multi-resource-app/: README.md
k8sdeployer/apps/: __init__.py  ansible_app.py  base.py
(+204 files in other folders)
